// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`setupView > provide also description 1`] = `
"<!DOCTYPE html>
<!DOCTYPE html>
<html lang="en" class="height-full" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Setup Your App | built with Octotask</title>
    <link rel="icon" href="/octotask/static/octotask-head.png">
    <link rel="stylesheet" href="/octotask/static/primer.css">
  </head>
  <body class="height-full bg-gray-light">
    <div class="d-flex flex-column flex-justify-center flex-items-center text-center height-full">
      <img src="/octotask/static/robot.svg" alt="Octotask Logo" width="100" class="mb-6">
      <div class="box-shadow rounded-2 border p-6 bg-white">
        <h1>
          Welcome to your Octotask App
          
        </h1>

        <p>Awesome App with Octotask</p>

        <div class="text-left mt-6">
          <h2 class="alt-h3 mb-2">Getting Started</h2>

          <p>To start building a GitHub App, you'll need to register a new app on GitHub.</p>
          <br>

          <form action="https://github.com/organizations/octotask/settings/apps/new" method="post" target="_blank" class="d-flex flex-items-center">
            <button class="btn btn-outline" name="manifest" id="manifest" value='{"name":"My App"}' >Register GitHub App</button>
            <a href="/octotask/import" class="ml-2">or use an existing Github App</a>
          </form>
        </div>
      </div>

      <div class="mt-4">
        <h4 class="alt-h4 text-gray-light">Need help?</h4>
        <div class="d-flex flex-justify-center mt-2">
          <a href="https://octotask.github.io/docs/" class="btn btn-outline mr-2">Documentation</a>
          <a href="https://github.com/octotask/octotask/discussions" class="btn btn-outline">Discuss on GitHub</a>
        </div>
      </div>
    </div>
  </body>
</html>"
`;

exports[`setupView > provide also name 1`] = `
"<!DOCTYPE html>
<!DOCTYPE html>
<html lang="en" class="height-full" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Setup My App | built with Octotask</title>
    <link rel="icon" href="/octotask/static/octotask-head.png">
    <link rel="stylesheet" href="/octotask/static/primer.css">
  </head>
  <body class="height-full bg-gray-light">
    <div class="d-flex flex-column flex-justify-center flex-items-center text-center height-full">
      <img src="/octotask/static/robot.svg" alt="Octotask Logo" width="100" class="mb-6">
      <div class="box-shadow rounded-2 border p-6 bg-white">
        <h1>
          Welcome to My App
          
        </h1>

        <p>This app was built using <a href="https://github.com/octotask/octotask">Octotask</a>, a framework for building GitHub Apps.</p>

        <div class="text-left mt-6">
          <h2 class="alt-h3 mb-2">Getting Started</h2>

          <p>To start building a GitHub App, you'll need to register a new app on GitHub.</p>
          <br>

          <form action="https://github.com/organizations/octotask/settings/apps/new" method="post" target="_blank" class="d-flex flex-items-center">
            <button class="btn btn-outline" name="manifest" id="manifest" value='{"name":"My App"}' >Register GitHub App</button>
            <a href="/octotask/import" class="ml-2">or use an existing Github App</a>
          </form>
        </div>
      </div>

      <div class="mt-4">
        <h4 class="alt-h4 text-gray-light">Need help?</h4>
        <div class="d-flex flex-justify-center mt-2">
          <a href="https://octotask.github.io/docs/" class="btn btn-outline mr-2">Documentation</a>
          <a href="https://github.com/octotask/octotask/discussions" class="btn btn-outline">Discuss on GitHub</a>
        </div>
      </div>
    </div>
  </body>
</html>"
`;

exports[`setupView > provide also version 1`] = `
"<!DOCTYPE html>
<!DOCTYPE html>
<html lang="en" class="height-full" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Setup Your App | built with Octotask</title>
    <link rel="icon" href="/octotask/static/octotask-head.png">
    <link rel="stylesheet" href="/octotask/static/primer.css">
  </head>
  <body class="height-full bg-gray-light">
    <div class="d-flex flex-column flex-justify-center flex-items-center text-center height-full">
      <img src="/octotask/static/robot.svg" alt="Octotask Logo" width="100" class="mb-6">
      <div class="box-shadow rounded-2 border p-6 bg-white">
        <h1>
          Welcome to your Octotask App
          <span class="Label Label--outline v-align-middle ml-2 text-gray-light">v1.0.0</span>
        </h1>

        <p>This app was built using <a href="https://github.com/octotask/octotask">Octotask</a>, a framework for building GitHub Apps.</p>

        <div class="text-left mt-6">
          <h2 class="alt-h3 mb-2">Getting Started</h2>

          <p>To start building a GitHub App, you'll need to register a new app on GitHub.</p>
          <br>

          <form action="https://github.com/organizations/octotask/settings/apps/new" method="post" target="_blank" class="d-flex flex-items-center">
            <button class="btn btn-outline" name="manifest" id="manifest" value='{"name":"My App"}' >Register GitHub App</button>
            <a href="/octotask/import" class="ml-2">or use an existing Github App</a>
          </form>
        </div>
      </div>

      <div class="mt-4">
        <h4 class="alt-h4 text-gray-light">Need help?</h4>
        <div class="d-flex flex-justify-center mt-2">
          <a href="https://octotask.github.io/docs/" class="btn btn-outline mr-2">Documentation</a>
          <a href="https://github.com/octotask/octotask/discussions" class="btn btn-outline">Discuss on GitHub</a>
        </div>
      </div>
    </div>
  </body>
</html>"
`;

exports[`setupView > providing bare minimum  1`] = `
"<!DOCTYPE html>
<!DOCTYPE html>
<html lang="en" class="height-full" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Setup Your App | built with Octotask</title>
    <link rel="icon" href="/octotask/static/octotask-head.png">
    <link rel="stylesheet" href="/octotask/static/primer.css">
  </head>
  <body class="height-full bg-gray-light">
    <div class="d-flex flex-column flex-justify-center flex-items-center text-center height-full">
      <img src="/octotask/static/robot.svg" alt="Octotask Logo" width="100" class="mb-6">
      <div class="box-shadow rounded-2 border p-6 bg-white">
        <h1>
          Welcome to your Octotask App
          
        </h1>

        <p>This app was built using <a href="https://github.com/octotask/octotask">Octotask</a>, a framework for building GitHub Apps.</p>

        <div class="text-left mt-6">
          <h2 class="alt-h3 mb-2">Getting Started</h2>

          <p>To start building a GitHub App, you'll need to register a new app on GitHub.</p>
          <br>

          <form action="https://github.com/organizations/octotask/settings/apps/new" method="post" target="_blank" class="d-flex flex-items-center">
            <button class="btn btn-outline" name="manifest" id="manifest" value='{"name":"My App"}' >Register GitHub App</button>
            <a href="/octotask/import" class="ml-2">or use an existing Github App</a>
          </form>
        </div>
      </div>

      <div class="mt-4">
        <h4 class="alt-h4 text-gray-light">Need help?</h4>
        <div class="d-flex flex-justify-center mt-2">
          <a href="https://octotask.github.io/docs/" class="btn btn-outline mr-2">Documentation</a>
          <a href="https://github.com/octotask/octotask/discussions" class="btn btn-outline">Discuss on GitHub</a>
        </div>
      </div>
    </div>
  </body>
</html>"
`;
